--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -14,7 +14,7 @@
 
     <p>I'm a fifth year PhD candidate in Department of Energy Science and Engineering at Stanford University researching carbon-constrained energy and transport systems. I study how 
 to reliably move away from fossil fuels while improving public health, consumer affordability, and system economics.  My research is advised by Prof. <a 
-href="https://https://ines.stanford.edu/">Inês Azevedo</a>.
+href="https://ines.stanford.edu/">Inês Azevedo</a>.
 
     <hr width="70%">
 
