--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -18,7 +18,7 @@ href="https://ines.stanford.edu/">Inês Azevedo</a>.
 
     <hr width="70%">
 
-        <p><a href="/cv/Madalsa_CV_Sept2023.pdf">Curriculum Vitae</a></p>
+        <p><a href="/cv/CV_Madalsa.pdf">Curriculum Vitae</a></p>
 
 
     <div class="is-container-row is-center">
