--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -18,8 +18,7 @@ href="https://ines.stanford.edu/">Inês Azevedo</a>.
 
     <hr width="70%">
 
-        <p><a href="/cv/CV_Madalsa.pdf">Curriculum Vitae</a></p>
-        <p><a href="/cv/ResearchStatementOct2023.pdf">Research Statement</a></p>
+        <p><a href="/cv/CV_Madalsa.pdf">Curriculum Vitae</a>    <a href="/cv/ResearchStatementOct2023.pdf">Research Statement</a></p>
 
 
 
