--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -8,17 +8,22 @@
 
     <h1>Madalsa Singh</h1>
     <p></p>
-    <p style="color:#6f777d;font-weight:bold">PhD Candidate, Stanford University</p>
+    <p style="color:#6f777d;font-weight:bold">Postdoctoral Research Fellow, University of California Santa Barbara</p>
+    <p style="color:#6f777d;font-weight:bold">PhD, Stanford University</p>
 
     <p></p>
 
-    <p>I'm a fifth year PhD candidate in Department of Energy Science and Engineering at Stanford University researching carbon-constrained energy and transport systems. I study how 
-to reliably move away from fossil fuels while improving public health, consumer affordability, and system economics.  My research is advised by Prof. <a 
-href="https://ines.stanford.edu/">Inês Azevedo</a>.
+    <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
+- Accelerate energy transition
+- Promote widespread adoption of clean energy technologies 
+- Optimize the integration of distributed energy resources into power grids 
+- Facilitate the phaseout of fossil technologies
 
     <hr width="100%">
 
-        <p><a href="/cv/CV_Madalsa.pdf">Curriculum Vitae</a>  |  <a href="/cv/ResearchStatementOct2023.pdf">Research Statement</a></p>
+        <p><a href="/cv/CV_Madalsa.pdf">Curriculum Vitae</a>  
+
+<!|  <a href="/cv/ResearchStatementOct2023.pdf">Research Statement</a></p>>
 
 
 
