--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -8,13 +8,18 @@
 
     <h1>Madalsa Singh</h1>
     <p></p>
-    <li style="color:#6f777d;font-weight:bold">Postdoctoral Research Fellow, University of California Santa Barbara</li>
-    <li style="color:#6f777d;font-weight:bold">PhD, Stanford University</li>
+    <p style="color:#6f777d;font-weight:bold">Postdoctoral Research Fellow, University of California Santa Barbara</p>
+    <p style="color:#6f777d;font-weight:bold">PhD, Stanford University</p>
 
-    <p></p>
 
     <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
+<ul>
+<li>Accelerate energy transition</li>
+<li>Promote widespread adoption of clean energy technologies </li>
+<li>Optimize the integration of distributed energy resources into power grids </li>
+<li>Facilitate the phaseout of fossil technologies</li>
 
+</ul>
 </p>
 
     <hr width="100%">
