--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -13,7 +13,7 @@
 
 
     <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
-<ul>
+<ul class = "dashed">
 <li>Accelerate energy transition</li>
 <li>Promote widespread adoption of clean energy technologies </li>
 <li>Optimize the integration of distributed energy resources into power grids </li>
