--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,16 +1,12 @@
 
----
-layout: bio-sidebar
-author_profile: true
----
-
-
 
 <div class="wrapper">
   <header>
     <div align="left">
       <img src="images/madalsa.jpeg" height="300" width="300">
     </div>
+      <div align="left">
+      </div>
 
 
     <h1>Madalsa Singh</h1>
