--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -16,10 +16,10 @@
 
 
     <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
- <li>Accelerate energy transition</li>
-<li>Promote widespread adoption of clean energy technologies </li>
-<li>Optimize the integration of distributed energy resources into power grids </li>
-<li>Facilitate the phaseout of fossil technologies</li>
+ <n>Accelerate energy transition</n>
+<n>Promote widespread adoption of clean energy technologies </n>
+<n>Optimize the integration of distributed energy resources into power grids </n>
+<n>Facilitate the phaseout of fossil technologies</n>
 </p>
 
     <hr width="100%">
@@ -33,7 +33,7 @@
     </div>
 
     <p>
-      madalsa@stanford.edu
+      madalsa@ucsb.edu | madalsa100@gmail.com
     </p>
 
   </header>
