--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -16,10 +16,10 @@
 
 
     <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
- <n>Accelerate energy transition</n>
-<n>Promote widespread adoption of clean energy technologies </n>
-<n>Optimize the integration of distributed energy resources into power grids </n>
-<n>Facilitate the phaseout of fossil technologies</n>
+ <br>Accelerate energy transition</br>
+<br>Promote widespread adoption of clean energy technologies </br>
+<br>Optimize the integration of distributed energy resources into power grids </br>
+<br>Facilitate the phaseout of fossil technologies</br>
 </p>
 
     <hr width="100%">
