--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -16,25 +16,22 @@
 
 
     <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
- <br>Accelerate energy transition
-<br>Promote widespread adoption of clean energy technologies
-<br>Optimize the integration of distributed energy resources into power grids
-<br>Facilitate the phaseout of fossil technologies
+ <br>- Accelerate energy transition
+<br>- Promote widespread adoption of clean energy technologies
+<br>- Optimize the integration of distributed energy resources into power grids
+<br>- Facilitate the phaseout of fossil technologies
 </p>
 
     <hr width="100%">
 
-        <p><a href="/cv/CV_Madalsa.pdf">Curriculum Vitae</a>  
+    <a href="/cv/CV_Madalsa.pdf">Curriculum Vitae</a>  
 
 
     <div class="is-container-row is-center">
       <div class="is-inset-8"><a href="https://github.com/madalsa" class="is-icon"><i class="fab fa-github fa-2x"></i></a></div>
       <div class="is-inset-8"><a href="https://scholar.google.com/citations?user=xzgLIO8AAAAJ&hl=en" class="is-icon"><i class="ai ai-google-scholar ai-2x"></i></a></div>
     </div>
-
-    <p>
       madalsa@ucsb.edu | madalsa100@gmail.com
-    </p>
 
   </header>
 </div>
