--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -3,16 +3,15 @@
 <div class="wrapper">
   <header>
     <div align="left">
-      <img src="images/madalsa.jpeg" height="300" width="300">
+      <img src="images/madalsa.jpeg" height="200" width="200">
     </div>
       <div align="left">
       </div>
 
 
     <h1>Madalsa Singh</h1>
-    <p></p>
-    <p style="color:#6f777d;font-weight:bold">Postdoctoral Research Fellow, University of California Santa Barbara</p>
-    <p style="color:#6f777d;font-weight:bold">PhD, Stanford University</p>
+    <p style="color:#6f777d;font-weight:bold">Postdoctoral Research Fellow, University of California Santa Barbara
+    <br> style="color:#6f777d;font-weight:bold">PhD, Stanford University</p>
 
 
     <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
