--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -10,8 +10,8 @@
 
 
     <h1>Madalsa Singh</h1>
-    <br style="color:#6f777d;font-weight:bold">Postdoctoral Research Fellow, University of California Santa Barbara
-    <br style="color:#6f777d;font-weight:bold">PhD, Stanford University
+    <p style="color:#6f777d;font-weight:bold">Postdoctoral Research Fellow, University of California Santa Barbara
+    <br style="color:#6f777d;font-weight:bold">PhD, Stanford University </p>
 
 
     <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
