--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -14,7 +14,7 @@
     <br style="color:#6f777d;font-weight:bold">PhD, Stanford University </p>
 
 
-    <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies that aim to:
+    <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies to:
  <br>- Accelerate energy transition
 <br>- Promote widespread adoption of clean energy technologies
 <br>- Optimize the integration of distributed energy resources into power grids
