--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -15,10 +15,10 @@
 
 
     <p> I study carbon-constrained energy systems with an emphasis on transportation, residential, and electricity sectors. I investigate place-based, equitable, and affordable strategies to:
- <br>- Accelerate energy transition
+ <br>- Reduce air emissions from energy use
 <br>- Promote widespread adoption of clean energy technologies
-<br>- Optimize the integration of distributed energy resources into power grids
-<br>- Facilitate the phaseout of fossil technologies
+<br>- Integrate distributed energy resources into power grids
+<br>- Facilitate the phaseout of fossil stock
 </p>
 
     <hr width="100%">
