--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -21,6 +21,8 @@
 <br>- Facilitate the phaseout of fossil stock
 </p>
 
+    <p style="color:#6f777d;font-weight:bold"> On job market 2024-2025. </p>
+
     <hr width="100%">
 
     <a href="/cv/CV_Madalsa.pdf">Curriculum Vitae</a>  
