--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -21,7 +21,7 @@
 <br>- Facilitate the phaseout of fossil stock
 </p>
 
-    <p style="color:#6f777d;font-weight:bold"> On the job market</p>
+    <p style="color:#6f777d;font-weight:bold"> On the job market 2024-2025</p>
 
     <hr width="100%">
 
