--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -19,9 +19,11 @@
 <br>- Promote widespread adoption of clean energy technologies
 <br>- Integrate distributed energy resources into power grids
 <br>- Facilitate the phaseout of fossil stock
+ <br><style="color:#6f777d;font-weight:bold"> On the job market for 2024-2025
+
 </p>
 
-    <p style="color:#6f777d;font-weight:bold"> On the job market for 2024-2025</p>
+   
 
     <hr width="100%">
 
