--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -19,7 +19,7 @@
 <br>- Promote widespread adoption of clean energy technologies
 <br>- Integrate distributed energy resources into power grids
 <br>- Facilitate the phaseout of fossil stock
- <br style="color:#6f777d;font-weight:bold"> On the job market for 2024-2025
+ <br> <style="color:#6f777d;font-weight:bold" On the job market for 2024-2025>
 
 </p>
 
