Add navigation sidebar and restructure site sections

--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -28,6 +28,8 @@
     <div class="is-container-row is-center">
       <div class="is-inset-8"><a href="https://github.com/madalsa" class="is-icon"><i class="fab fa-github fa-2x"></i></a></div>
       <div class="is-inset-8"><a href="https://scholar.google.com/citations?user=xzgLIO8AAAAJ&hl=en" class="is-icon"><i class="ai ai-google-scholar ai-2x"></i></a></div>
+      <div class="is-inset-8"><a href="https://bsky.app/profile/madalsa.bsky.social" class="is-icon"><i class="fab fa-twitter fa-2x"></i></a></div>
+
     </div>
       mksgis@rit.edu | madalsa100@gmail.com
 
