--- a/_includes/bio-name.html
+++ b/_includes/bio-name.html
@@ -1,8 +1,18 @@
-
 <div class="wrapper">
   <header>
 
     <h1>Madalsa Singh</h1>
+    <p></p>
+    <p style="color:#6f777d;font-weight:bold">Assistant Professor, Golisano Institute of Sustainability, Rochester Institute of Technology</p>
+
+    <div class="is-container-row is-center">
+      <div class="is-inset-8"><a href="https://github.com/madalsa" class="is-icon"><i class="fab fa-github fa-2x"></i></a></div>
+      <div class="is-inset-8"><a href="https://scholar.google.com/citations?user=xzgLIO8AAAAJ&hl=en" class="is-icon"><i class="ai ai-google-scholar ai-2x"></i></a></div>
+      <div class="is-inset-8"><a href="https://bsky.app/profile/madalsa.bsky.social" class="is-icon"><i class="fab fa-twitter fa-2x"></i></a></div>
+
+    </div>
+
+    <br>
 
   </header>
 </div>
