--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -15,7 +15,7 @@
 
     <p> I study carbon-constrained energy systems, with an emphasis on transport and electricity sectors. My research develops place-based, equitable, and affordable strategies to rapidly reduce air emissions from energy use. </p>
 
-<p>Previously, I was a postdoctoral research fellow at the University of California Santa Barbara, and I received my PhD from Stanford University. 
+<p>Previously, I was a postdoctoral research fellow at the University of California Santa Barbara. I received my PhD from Stanford University and my undergraduate degree from IIT Bombay.
 </p>
 
     <hr width="100%">
